--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
   },
   "dependencies": {
     "babelify": "^6.1.2",
-    "browserify": "^10.2.4"
+    "browserify": "^10.2.4",
+    "mkdirp": "^0.5.1",
+    "ncp": "^2.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^3.1.15",
