--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
   "dependencies": {
     "babelify": "^6.1.2",
     "browserify": "^10.2.4",
+    "minimist": "^1.1.1",
     "mkdirp": "^0.5.1",
+    "mustache": "^2.1.1",
     "ncp": "^2.0.0"
   },
   "devDependencies": {
