--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
     "is-url": "^1.2.1",
     "minimist": "^1.1.1",
     "mkdirp": "^0.5.1",
-    "mustache": "^2.1.1"
+    "mustache": "^2.1.1",
+    "object-assign": "^3.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^3.1.15",
