--- a/example/package.json
+++ b/example/package.json
@@ -2,14 +2,18 @@
   "name": "react-styleguide-generator-example",
   "private": true,
   "scripts": {
+    "prestart": "npm install",
+    "start": "npm run dev && npm run serve -- ./styleguide",
     "dev": "node ../bin/rsg 'components/**/*.js' -t 'React Style Guide' -v -f 'https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css'",
-    "prod": "rsg 'components/**/*.js' -t 'React Style Guide' -f 'https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css'"
+    "prod": "rsg 'components/**/*.js' -t 'React Style Guide' -f 'https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css'",
+    "serve": "serve"
   },
   "dependencies": {
     "react": "^0.13.3",
     "react-bootstrap": "^0.23.3"
   },
   "devDependencies": {
-    "react-styleguide-generator": "*"
+    "react-styleguide-generator": "*",
+    "serve": "^1.4.0"
   }
 }
