--- a/package.json
+++ b/package.json
@@ -13,13 +13,12 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "styleguide": "node bin/rsg 'example/components/**/*.js' -t 'React Style Guide' -b 'example/styleguide' -o 'example/styleguide' -v -f 'https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css'",
-    "prod": "npm run prod:css && npm run prod:js",
-    "prod:css": "cssnext -c src/index.css dist/_sg.css",
-    "prod:js": "browserify -x react src | uglifyjs -m -o dist/_sg.js",
+    "build": "npm run build:css && npm run build:js",
+    "build:css": "cssnext -c src/index.css dist/sg.css",
+    "build:js": "browserify -x react src | uglifyjs -m -o dist/sg.js",
     "dev": "npm run dev:css && npm run dev:js",
-    "dev:css": "cssnext -sv src/index.css dist/_sg.css",
-    "dev:js": "browserify -d -x react src -o dist/_sg.js"
+    "dev:css": "cssnext -sv src/index.css dist/sg.css",
+    "dev:js": "browserify -d -x react src -o dist/sg.js"
   },
   "files": [
     "bin",
