--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npm run build:css && npm run build:js",
-    "build:css": "cssnext -c src/index.css dist/sg.css",
-    "build:js": "browserify -x react src | uglifyjs -m -o dist/sg.js",
+    "clean": "rimraf dist/*",
+    "prod": "npm run clean && npm run prod:css && npm run prod:js",
+    "prod:css": "cssnext -c src/index.css dist/sg.css",
+    "prod:js": "browserify -x react src | uglifyjs -m -o dist/sg.js",
     "dev": "npm run dev:css && npm run dev:js",
     "dev:css": "cssnext -sv src/index.css dist/sg.css",
     "dev:js": "browserify -d -x react src -o dist/sg.js"
@@ -72,6 +73,7 @@
     "highlight.js": "^8.6.0",
     "marked": "^0.3.3",
     "page": "^1.6.3",
+    "rimraf": "^2.4.0",
     "uglify-js": "^2.4.23"
   }
 }
