--- a/package.json
+++ b/package.json
@@ -47,7 +47,11 @@
   },
   "homepage": "https://github.com/pocotan001/react-styleguide-generator#readme",
   "standard": {
-    "parser": "babel-eslint"
+    "parser": "babel-eslint",
+    "ignore": [
+      "dist",
+      "example"
+    ]
   },
   "peerDependencies": {
     "react": ">=0.13"
