--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "dev-build:js": "browserify -d -t [babelify --stage 0] -x react app -o dist/app.js",
     "clean": "rimraf dist/*",
     "styleguide": "node bin/rsg",
-    "ghpages": "npm run styleguide -- -r 'react-styleguide-generator' && gh-pages -d styleguide",
-    "postpublish": "npm run ghpages"
+    "ghpages": "npm run styleguide -- -r 'react-styleguide-generator' && gh-pages -d styleguide"
   },
   "files": [
     "bin",
