--- a/example/package.json
+++ b/example/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "start": "npm run styleguide && npm run serve -- ./styleguide",
-    "styleguide": "rsg",
+    "styleguide": "rsg 'example/components/**/*.js'",
     "serve": "serve"
   },
   "dependencies": {
