--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-styleguide-generator",
   "version": "0.0.14",
-  "description": "Easily generate a style guides from your React components",
+  "description": "Easily generate a good-looking styleguide by adding some documentation to your React project",
   "main": "lib/rsg.js",
   "bin": {
     "rsg": "bin/rsg"
@@ -16,7 +16,7 @@
     "dev-build:css": "cssnext -s app/index.css dist/app.css",
     "dev-build:js": "browserify -d -t [babelify --stage 0] -x react app -o dist/app.js",
     "clean": "rimraf dist/*",
-    "styleguide": "node bin/rsg",
+    "styleguide": "node bin/rsg 'example/components/**/*.js'",
     "ghpages": "npm run styleguide -- -r 'react-styleguide-generator' && gh-pages -d styleguide"
   },
   "files": [
