--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
     "glob": "^5.0.10",
     "minimist": "^1.1.1",
     "mustache": "^2.1.2",
-    "object-assign": "^3.0.0"
+    "object-assign": "^3.0.0",
+    "react-docgen": "^1.3.0"
   },
   "devDependencies": {
     "babel-eslint": "^3.1.18",
