--- a/package.json
+++ b/package.json
@@ -68,7 +68,8 @@
     "mustache": "^2.1.2",
     "object-assign": "^3.0.0",
     "react-docgen": "^1.3.0",
-    "react-simpletabs": "matthewgertner/react-simpletabs"
+    "react-simpletabs": "matthewgertner/react-simpletabs",
+    "watchify": "^3.2.3"
   },
   "devDependencies": {
     "babel-eslint": "^3.1.18",
