--- a/package.json
+++ b/package.json
@@ -40,6 +40,15 @@
     "styleguide"
   ],
   "author": "pocotan001",
+  "contributors": [
+    {
+      "name": "Theo Gravity",
+      "email": "theo@suteki.nu"
+    },
+    {
+      "name": "Marcello Bastea-Forte",
+      "email": "marcello@cellosoft.com"
+    }],
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/pocotan001/react-styleguide-generator/issues"
@@ -79,7 +88,7 @@
     "highlight.js": "^8.6.0",
     "marked": "^0.3.3",
     "mocha": "^2.2.5",
-    "page": "^1.6.3",
+    "page": "1.6.3",
     "react": "^0.13.3",
     "react-bootstrap": "0.23.5",
     "rimraf": "^2.4.0",
