--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     {
       "name": "Marcello Bastea-Forte",
       "email": "marcello@cellosoft.com"
-    }],
+    }
+  ],
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/pocotan001/react-styleguide-generator/issues"
@@ -77,9 +78,10 @@
     "minimist": "^1.1.1",
     "mustache": "^2.1.2",
     "object-assign": "^3.0.0",
-    "react-docgen": "^1.3.0",
+    "react-docgen": "^2.0.0",
     "react-simpletabs": "matthewgertner/react-simpletabs",
-    "watchify": "^3.2.3"
+    "watchify": "^3.2.3",
+    "xtend": "^4.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^3.1.18",
