--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "dev-build:css": "cssnext -s app/index.css dist/app.css",
     "dev-build:js": "browserify -d -t [babelify --stage 0] -x react app -o dist/app.js",
     "clean": "rimraf dist/*",
-    "styleguide": "node bin/rsg 'example/**/*.js' -c 'styleguide.json' -v | bunyan -o short",
+    "styleguide": "node bin/rsg 'example/**/*.js' -v | bunyan -o short",
     "ghpages": "npm run styleguide -- -r 'react-styleguide-generator' && gh-pages -d styleguide"
   },
   "files": [
