--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "dev-build:css": "cssnext -s app/index.css dist/app.css",
     "dev-build:js": "browserify -d -t [babelify --stage 0] -x react app -o dist/app.js",
     "clean": "rimraf dist/*",
-    "styleguide": "node bin/rsg 'example/**/*.js' -v | bunyan -o short",
-    "ghpages": "npm run styleguide -- -r 'react-styleguide-generator' && gh-pages -d styleguide"
+    "styleguide": "node bin/rsg 'example/**/*.js' -v | bunyan -o short"
   },
   "files": [
     "bin",
@@ -80,7 +79,6 @@
   "devDependencies": {
     "babel-eslint": "^4.0.5",
     "cssnext": "^1.7.1",
-    "gh-pages": "^0.3.1",
     "highlight.js": "^8.6.0",
     "marked": "^0.3.3",
     "mocha": "^2.2.5",
