--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "bunyan": "^1.4.0",
     "fs-extra": "^0.20.1",
     "glob": "^5.0.10",
+    "livereload": "^0.3.7",
     "minimist": "^1.1.1",
     "mustache": "^2.1.2",
     "object-assign": "^3.0.0",
