:arrow_up: upgrade dependencies

--- a/example/package.json
+++ b/example/package.json
@@ -7,8 +7,9 @@
     "serve": "serve ./styleguide"
   },
   "dependencies": {
-    "react": "^0.13.3",
-    "react-bootstrap": "^0.23.5"
+    "react": "^0.14.0",
+    "react-bootstrap": "^0.27.1",
+    "react-dom": "^0.14.0"
   },
   "devDependencies": {
     "react-styleguide-generator": "*",
