--- a/example/package.json
+++ b/example/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "start": "npm run styleguide && npm run serve",
-    "styleguide": "rsg 'components/**/*.js'",
+    "styleguide": "rsg \"components/**/*.js\"",
     "serve": "serve ./styleguide"
   },
   "dependencies": {
