--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
     "mustache": "^2.1.2",
     "object-assign": "^4.0.1",
     "react-docgen": "^2.0.0",
-    "react-simpletabs": "matthewgertner/react-simpletabs",
+    "react-simpletabs": "theogravity/react-simpletabs#react-0.14",
     "slash": "^1.0.0",
     "watchify": "^3.2.3"
   },
