--- a/package.json
+++ b/package.json
@@ -8,14 +8,8 @@
   },
   "scripts": {
     "test": "standard && mocha test/**/*.js",
-    "prod": "npm run clean && npm run build",
-    "build": "npm run build:css && npm run build:js",
-    "build:css": "cssnext -c app/index.css dist/app.css",
-    "build:js": "NODE_ENV=production webpack --config webpack.config.prod.js",
-    "dev-build": "npm run dev-build:css && npm run dev-build:js",
-    "dev-build:css": "cssnext -s app/index.css dist/app.css",
-    "dev-build:js": "NODE_ENV=development webpack -d --config webpack.config.dev.js",
-    "clean": "rimraf dist/*",
+    "start": "NODE_ENV=development node bin/rsg 'example/components/**/*.js' -v -d",
+    "clean": "rimraf rsg-tmp/*",
     "styleguide": "node bin/rsg 'example/components/**/*.js' -v",
     "ghpages": "npm run styleguide -- -r 'react-styleguide-generator' && gh-pages -d styleguide"
   },
@@ -75,6 +69,8 @@
   "dependencies": {
     "babel": "^5.8.19",
     "bunyan": "^1.4.0",
+    "css-loader": "^0.23.0",
+    "cssnext-loader": "^1.0.1",
     "fs-extra": "^0.24.0",
     "glob": "^5.0.10",
     "minimist": "^1.1.1",
@@ -82,7 +78,8 @@
     "object-assign": "^4.0.1",
     "react-docgen": "^2.0.0",
     "react-simpletabs": "matthewgertner/react-simpletabs",
-    "slash": "^1.0.0"
+    "slash": "^1.0.0",
+    "style-loader": "^0.13.0"
   },
   "devDependencies": {
     "babel-core": "^5.8.34",
@@ -90,9 +87,11 @@
     "babel-loader": "^5.4.0",
     "babel-plugin-react-transform": "^1.1.1",
     "cssnext": "^1.7.1",
-    "eslint-plugin-react": "^2.7.1",
+    "eslint-plugin-react": "^3.10.0",
+    "express": "^4.13.3",
     "gh-pages": "^0.4.0",
     "highlight.js": "^8.6.0",
+    "immutable": "^3.7.5",
     "marked": "^0.3.3",
     "mocha": "^2.2.5",
     "page": "1.6.3",
@@ -103,7 +102,7 @@
     "react-transform-hmr": "^1.0.1",
     "redbox-react": "^1.2.0",
     "rimraf": "^2.4.0",
-    "standard": "^5.3.1",
+    "standard": "^5.4.1",
     "uglify-js": "^2.4.23",
     "webpack": "^1.12.8",
     "webpack-dev-middleware": "^1.2.0",
