--- a/package.json
+++ b/package.json
@@ -68,44 +68,44 @@
   },
   "dependencies": {
     "babel": "^5.8.19",
+    "babel-core": "^5.8.34",
+    "babel-loader": "^5.4.0",
+    "babel-plugin-react-transform": "^1.1.1",
     "bunyan": "^1.4.0",
     "css-loader": "^0.23.0",
+    "cssnext": "^1.7.1",
     "cssnext-loader": "^1.0.1",
+    "express": "^4.13.3",
     "fs-extra": "^0.24.0",
     "glob": "^5.0.10",
+    "highlight.js": "^8.6.0",
+    "immutable": "^3.7.5",
+    "marked": "^0.3.3",
     "minimist": "^1.1.1",
     "mustache": "^2.1.2",
     "object-assign": "^4.0.1",
     "react-docgen": "^2.0.0",
     "react-simpletabs": "matthewgertner/react-simpletabs",
     "slash": "^1.0.0",
-    "style-loader": "^0.13.0"
-  },
-  "devDependencies": {
-    "babel-core": "^5.8.34",
-    "babel-eslint": "^4.0.5",
-    "babel-loader": "^5.4.0",
-    "babel-plugin-react-transform": "^1.1.1",
-    "cssnext": "^1.7.1",
-    "eslint-plugin-react": "^3.10.0",
-    "express": "^4.13.3",
-    "gh-pages": "^0.4.0",
-    "highlight.js": "^8.6.0",
-    "immutable": "^3.7.5",
-    "marked": "^0.3.3",
-    "mocha": "^2.2.5",
-    "page": "1.6.3",
-    "react": "^0.14.3",
+    "style-loader": "^0.13.0",
     "react-bootstrap": "0.27.1",
-    "react-dom": "^0.14.3",
     "react-transform-catch-errors": "^1.0.0",
     "react-transform-hmr": "^1.0.1",
     "redbox-react": "^1.2.0",
+    "webpack-dev-middleware": "^1.2.0",
+    "webpack-hot-middleware": "^2.5.0",
+    "webpack": "^1.12.8"
+  },
+  "devDependencies": {
+    "babel-eslint": "^4.0.5",
+    "eslint-plugin-react": "^3.10.0",
+    "gh-pages": "^0.4.0",
+    "mocha": "^2.2.5",
+    "page": "1.6.3",
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3",
     "rimraf": "^2.4.0",
     "standard": "^5.4.1",
-    "uglify-js": "^2.4.23",
-    "webpack": "^1.12.8",
-    "webpack-dev-middleware": "^1.2.0",
-    "webpack-hot-middleware": "^2.5.0"
+    "uglify-js": "^2.4.23"
   }
 }
