--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rsg-alt",
-  "version": "2.1.1",
+  "version": "2.2.0",
   "description": "A React component guide that generates code examples, prop documentation, rendered component samples and active development.",
   "main": "lib/rsg.js",
   "bin": {
@@ -74,6 +74,7 @@
     "css-loader": "^0.23.0",
     "cssnext": "^1.7.1",
     "cssnext-loader": "^1.0.1",
+    "deepmerge": "anthonator/deepmerge#feature/array-options",
     "express": "^4.13.3",
     "fs-extra": "^0.24.0",
     "glob": "^5.0.10",
