--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rsg-alt",
-  "version": "2.5.1",
+  "version": "3.0.0",
   "description": "A React component guide that generates code examples, prop documentation, rendered component samples and active development.",
   "main": "lib/rsg.js",
   "bin": {
@@ -29,11 +29,14 @@
   "keywords": [
     "component",
     "documentation",
+    "documentor",
+    "docs",
     "generator",
     "markdown",
     "react",
     "styleguide",
     "react-docgen",
+    "style-guide",
     "webpack",
     "sample",
     "examples",
@@ -66,10 +69,12 @@
     ]
   },
   "dependencies": {
-    "babel": "^5.8.19",
-    "babel-core": "^5.8.34",
-    "babel-loader": "^5.4.0",
-    "babel-plugin-react-transform": "^1.1.1",
+    "babel-core": "^6.3.17",
+    "babel-loader": "^6.2.0",
+    "babel-plugin-react-transform": "^2.0.0-beta1",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "babel-preset-stage-0": "^6.3.13",
     "bunyan": "^1.4.0",
     "css-loader": "^0.23.0",
     "cssnext": "^1.7.1",
@@ -93,9 +98,9 @@
     "redbox-react": "^1.2.0",
     "slash": "^1.0.0",
     "style-loader": "^0.13.0",
-    "webpack": "^1.12.8",
-    "webpack-dev-middleware": "^1.2.0",
-    "webpack-hot-middleware": "^2.5.0"
+    "webpack": "^1.12.9",
+    "webpack-dev-middleware": "^1.4.0",
+    "webpack-hot-middleware": "^2.6.0"
   },
   "devDependencies": {
     "babel-eslint": "^4.0.5",
