--- a/example/package.json
+++ b/example/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-styleguide-generator-example",
+  "name": "rsg-alt-example",
   "private": true,
   "scripts": {
     "start": "npm run styleguide && npm run serve",
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "react": "^0.14.0",
-    "react-bootstrap": "^0.27.1",
+    "react-bootstrap": "0.27.1",
     "react-dom": "^0.14.0"
   },
   "devDependencies": {
