--- a/package.json
+++ b/package.json
@@ -83,10 +83,10 @@
     "babel-preset-react": "^6.11.1",
     "babel-register": "^6.11.6",
     "babelify": "^7.2.0",
-    "browserify": "^13.0.0",
+    "browserify": "^14.0.0",
     "bunyan": "^1.4.0",
-    "fs-extra": "^0.24.0",
-    "glob": "^5.0.10",
+    "fs-extra": "^2.0.0",
+    "glob": "^7.1.1",
     "minimist": "^1.1.1",
     "mustache": "^2.1.2",
     "react-docgen": "^2.0.0",
@@ -95,13 +95,13 @@
     "watchify": "^3.7.0"
   },
   "devDependencies": {
-    "ava": "^0.17.0",
+    "ava": "^0.188888888.0",
     "babel-eslint": "^7.1.1",
     "cssnano": "^3.8.1",
-    "gh-pages": "^0.4.0",
-    "highlight.js": "^8.6.0",
+    "gh-pages": "^0.12.0",
+    "highlight.js": "^9.9.0",
     "marked": "^0.3.3",
-    "page": "1.6.3",
+    "page": "1.7.1",
     "postcss-cli": "^2.6.0",
     "postcss-cssnext": "^2.9.0",
     "postcss-import": "^9.0.0",
